--- a/HW/public/question.html
+++ b/HW/public/question.html
@@ -33,20 +33,18 @@
   <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg">
         <div class="container-lg">
-            <a class="navbar-brand" href="">Ask</a>
+            <a class="navbar-brand" href="">JustAsk</a>
             <div class="collapse navbar-collapse justify-content-between navbar-nav mb-2 mb-lg-0" id="navbarSupportedContent">
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-dark" type="submit">Ask</button>
                 </form>
-                <div>
-                    <div class='d-flex flex-row align-items-center gap-3'>
-                        <img class="avatar" src="../static/img/css_ava.svg"/>
-                        <div>
-                            <p class="mb-2">Nikita</p>
-                            <a href="">Settings</a>
-                            <a href="">Log out</a>
-                        </div>
+                <div class='d-flex flex-row align-items-center gap-3'>
+                    <img class="avatar" src="../static/img/css_ava.svg"/>
+                    <div>
+                        <p class="mb-2">Nikita</p>
+                        <a href="">Settings</a>
+                        <a href="">Log out</a>
                     </div>
                 </div>
             </div>
@@ -54,7 +52,7 @@
     </nav>
 
 <!-- Begin page content -->
-<main class="flex-shrink-0">
+<main class="flex-shrink-0 pt-3 pb-sm-3">
     <div class="container">
         <div class="row">
             <div class="col-8">
@@ -74,11 +72,11 @@
                                     sunt in culpa qui officia deserunt mollit anim id est laborum.
                                 </div>
                             </div>
-                            <div class = "g-4" style="display: flex;">
+                            <div class = "g-4 d-flex">
                                 <div class="col-3">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="button">Like</button>
                                 </div>
-                                <div class="col-7" style="font-size: 20px;">Tags: <a href="">shishka</a> <a href="">aboba</a></div>
+                                <div class="col-7 fs-5">Tags: <a href="">shishka</a> <a href="">aboba</a></div>
                             </div>
                         </div>
                         <hr class="bg-dark border-2 border-top border-dark g-3" />
@@ -96,14 +94,14 @@
                                         sunt in culpa qui officia deserunt mollit anim id est laborum.
                                     </div>
                                 </div>
-                                <div class = "g-4" style="display: flex;">
+                                <div class = "g-4 d-flex">
                                     <div class="col-2">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="button">Like</button>
                                     </div>
                                     <div class="col-10">
                                     <div class="form-check">
                                           <input class="form-check-input" type="checkbox" value="6"/>
-                                          <label class="form-check-label">Правильно!</label>
+                                          <label class="form-check-label">Correct!</label>
                                         </div>
                                     </div>
                                 </div>
@@ -123,21 +121,34 @@
                                         sunt in culpa qui officia deserunt mollit anim id est laborum.
                                     </div>
                                 </div>
-                                <div class = "g-4" style="display: flex;">
+                                <div class = "g-4 d-flex">
                                     <div class="col-2">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="button">Like</button>
                                     </div>
                                     <div class="col-10">
                                     <div class="form-check">
                                           <input class="form-check-input" type="checkbox" value="6"/>
-                                          <label class="form-check-label">Правильно!</label>
+                                          <label class="form-check-label">Correct!</label>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <hr class="bg-dark border-2 border-top border-dark g-3" />
-                        <div class="form-group" style="padding-left: 0px;">
+                        <nav aria-label="..." class="g-4 ps-sm-0">
+                          <ul class="pagination">
+                            <li class="page-item disabled">
+                              <a class="page-link">Previous</a>
+                            </li>
+                            <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item">
+                              <a class="page-link" href="#">Next</a>
+                            </li>
+                          </ul>
+                        </nav>
+                        <hr class="bg-dark border-2 border-top border-dark g-2" />
+                        <div class="form-group ps-sm-0">
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Enter your answer here"></textarea>
                         </div>
                         <button type="button" class="btn btn-primary col-2 g-3" >Answer</button>
@@ -147,31 +158,31 @@
             <div class="col-4">
                 <div class="row">
                     <h2>Popular tags</h2>
-                    <div class='text-wrap d-flex gap-3 flex-wrap' style='align-self: right; width: 300px'>
-                      <div class='program-lang' style='font-weight: bold;'>
-                          <span style='color: #ff6347;'>Java</span>
+                    <div class='text-wrap d-flex gap-3 flex-wrap align-self-sm-auto w-75'>
+                      <div class='program-lang fw-bolder'>
+                          <a class="link-primary" href="">Java</a>
                       </div>
-                      <div class='program-lang' style='font-weight: bold;'>
-                        <span style='color: #00bfff;'>.NET</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-secondary" href="">.NET</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span style='color: red;'>PHP</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-success" href="">PHP</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span style='color: green;'>JavaScript</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-danger" href="">JavaScript</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span>C</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-warning" href="">C</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span>C++</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-info" href="">C++</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span style='color: gray;'>Python</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-primary" href="">Python</a>
                       </div>
                   </div>
                     <h2>Best Members</h2>
-                    <ul class="list-group" style="margin-left:15px; max-width: 250px;">
+                    <ul class="list-group ms-sm-3 w-75">
                         <li class="list-group-item"><a href="">Mr.Freeman</a></li>
                         <li class="list-group-item"><a href="">A second item</a></li>
                         <li class="list-group-item"><a href="">A third item</a></li>
