--- a/HW/public/settings.html
+++ b/HW/public/settings.html
@@ -33,20 +33,18 @@
 <body class="d-flex flex-column h-100">
    <nav class="navbar navbar-expand-lg">
         <div class="container-lg">
-            <a class="navbar-brand" href="">Ask</a>
+            <a class="navbar-brand" href="">JustAsk</a>
             <div class="collapse navbar-collapse justify-content-between navbar-nav mb-2 mb-lg-0" id="navbarSupportedContent">
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-dark" type="submit">Ask</button>
                 </form>
-                <div>
-                    <div class='d-flex flex-row align-items-center gap-3'>
-                        <img class="avatar" src="../static/img/css_ava.svg"/>
-                        <div>
-                            <p class="mb-2">Nikita</p>
-                            <a href="">Settings</a>
-                            <a href="">Log out</a>
-                        </div>
+                <div class='d-flex flex-row align-items-center gap-3'>
+                    <img class="avatar" src="../static/img/css_ava.svg"/>
+                    <div>
+                        <p class="mb-2">Nikita</p>
+                        <a href="">Settings</a>
+                        <a href="">Log out</a>
                     </div>
                 </div>
             </div>
@@ -54,12 +52,12 @@
     </nav>
 
 <!-- Begin page content -->
-<main class="flex-shrink-0">
+<main class="flex-shrink-0 pt-3 pb-sm-3">
     <div class="container">
         <div class="row">
             <div class="col-8">
                 <h2>Settings: Nikita</h2>
-                  <form class="col-7" action="" method="POST">
+                  <form class="col-7 mt-sm-3" action="" method="POST">
                     <div class='mb-3'>
                       <label for='login' class='form-label'>Login</label>
                       <input type='text' class='form-control' id='login' value='Nikita'>
@@ -82,31 +80,31 @@
             <div class="col-4">
                 <div class="row">
                     <h2>Popular tags</h2>
-                    <div class='text-wrap d-flex gap-3 flex-wrap' style='align-self: right; width: 300px'>
-                      <div class='program-lang' style='font-weight: bold;'>
-                          <span style='color: #ff6347;'>Java</span>
+                    <div class='text-wrap d-flex gap-3 flex-wrap align-self-sm-auto w-75'>
+                      <div class='program-lang fw-bolder'>
+                          <a class="link-primary" href="">Java</a>
                       </div>
-                      <div class='program-lang' style='font-weight: bold;'>
-                        <span style='color: #00bfff;'>.NET</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-secondary" href="">.NET</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span style='color: red;'>PHP</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-success" href="">PHP</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span style='color: green;'>JavaScript</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-danger" href="">JavaScript</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span>C</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-warning" href="">C</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span>C++</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-info" href="">C++</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span style='color: gray;'>Python</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-primary" href="">Python</a>
                       </div>
                   </div>
                     <h2>Best Members</h2>
-                    <ul class="list-group" style="margin-left:15px; max-width: 250px;">
+                    <ul class="list-group ms-sm-3 w-75">
                         <li class="list-group-item"><a href="">Mr.Freeman</a></li>
                         <li class="list-group-item"><a href="">A second item</a></li>
                         <li class="list-group-item"><a href="">A third item</a></li>
