--- a/HW/public/signup.html
+++ b/HW/public/signup.html
@@ -31,30 +31,24 @@
     <link href="sticky-footer-navbar.css" rel="stylesheet">
   </head>
 <body class="d-flex flex-column h-100">
-   <nav class="navbar navbar-expand-lg">
+   <nav class="navbar navbar-expand-lg p-3">
         <div class="container-lg">
-            <a class="navbar-brand" href="">Ask</a>
+            <a class="navbar-brand" href="">JustAsk</a>
             <div class="collapse navbar-collapse justify-content-between navbar-nav mb-2 mb-lg-0" id="navbarSupportedContent">
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-dark" type="submit">Ask</button>
                 </form>
-                <div>
-                    <div class='d-flex flex-row align-items-center gap-3'>
-                        <img class="avatar" src="../static/img/css_ava.svg"/>
-                        <div>
-                            <p class="mb-2">Nikita</p>
-                            <a href="">Settings</a>
-                            <a href="">Log out</a>
-                        </div>
-                    </div>
+                <div class='d-flex flex-row align-items-center gap-3'>
+                    <a href="">Log in</a>
+                    <a href="">Register</a>
                 </div>
             </div>
         </div>
     </nav>
 
 <!-- Begin page content -->
-<main class="flex-shrink-0">
+<main class="flex-shrink-0 pt-3 pb-sm-3">
     <div class="container">
         <div class="row">
             <div class="col-8">
@@ -68,23 +62,23 @@
                         <form class="mt-4 w-50">
                           <div class="input-group mb-4">
                             <span class="input-group-text">Login</span>
-                            <input type="text" class="form-control" id="login">
+                            <input type="text" class="form-control" id="login" required>
                           </div>
                           <div class="input-group mb-4">
                             <span class="input-group-text">Email</span>
-                            <input type="email" class="form-control" id="email">
+                            <input type="email" class="form-control" id="email" required>
                           </div>
                           <div class="input-group mb-4">
                             <span class="input-group-text">Nickname</span>
-                            <input type="text" class="form-control" id="nickname">
+                            <input type="text" class="form-control" id="nickname" required>
                           </div>
                           <div class="input-group mb-4">
                             <span class="input-group-text">Password</span>
-                            <input type="password" class="form-control" id="password">
+                            <input type="password" class="form-control" id="password" required>
                           </div>
                           <div class="input-group mb-3">
                             <span class="input-group-text">Repeat password</span>
-                            <input type="password" class="form-control" id="password_confirm">
+                            <input type="password" class="form-control" id="password_confirm" required>
                           </div>
                           <div class="mb-4">
                               <label for="formFile" class="form-label">Upload avatar</label>
@@ -99,31 +93,31 @@
             <div class="col-4">
                 <div class="row">
                     <h2>Popular tags</h2>
-                    <div class='text-wrap d-flex gap-3 flex-wrap' style='align-self: right; width: 300px'>
-                      <div class='program-lang' style='font-weight: bold;'>
-                          <span style='color: #ff6347;'>Java</span>
+                    <div class='text-wrap d-flex gap-3 flex-wrap align-self-sm-auto w-75'>
+                      <div class='program-lang fw-bolder'>
+                          <a class="link-primary" href="">Java</a>
                       </div>
-                      <div class='program-lang' style='font-weight: bold;'>
-                        <span style='color: #00bfff;'>.NET</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-secondary" href="">.NET</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span style='color: red;'>PHP</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-success" href="">PHP</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span style='color: green;'>JavaScript</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-danger" href="">JavaScript</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span>C</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-warning" href="">C</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span>C++</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-info" href="">C++</a>
                       </div>
-                      <div class="program-lang" style='font-weight: bold;'>
-                        <span style='color: gray;'>Python</span>
+                      <div class='program-lang fw-bolder'>
+                        <a class="link-primary" href="">Python</a>
                       </div>
                   </div>
                     <h2>Best Members</h2>
-                    <ul class="list-group" style="margin-left:15px; max-width: 250px;">
+                    <ul class="list-group ms-sm-3 w-75">
                         <li class="list-group-item"><a href="">Mr.Freeman</a></li>
                         <li class="list-group-item"><a href="">A second item</a></li>
                         <li class="list-group-item"><a href="">A third item</a></li>
